[gd_scene load_steps=4 format=3 uid="uid://ibdedkxdynvm"]

[ext_resource type="Script" path="res://Scenes/QuestionView/AnswerRevealed/AnswerRevealed.gd" id="1_4mw8t"]

[sub_resource type="LabelSettings" id="LabelSettings_b44ln"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_3ouw1"]
font_size = 24

[node name="AnswerRevealed" type="Control"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4mw8t")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "You answered:"
label_settings = SubResource("LabelSettings_b44ln")
horizontal_alignment = 1

[node name="YourAnswer" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_3ouw1")
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Answer:"
label_settings = SubResource("LabelSettings_b44ln")
horizontal_alignment = 1

[node name="AnswerMarkContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
